gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/test10327/empty.d
version https://git-lfs.github.com/spec/v1
oid sha256:0b7996544db059cf176696d3c74948fc64a5b665dd2c5cef1e7c5bc885470c82
size 14
